--- a/Backend/SearchJobNodeJS/package.json
+++ b/Backend/SearchJobNodeJS/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "mongoose": "^6.0.12",
+    "node": "^17.1.0",
     "nodemon": "^2.0.15"
   }
 }
